adds quotes and fixes some grammatical errors

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="card" id="event_2">
         <h3>The Spark Ignites</h3>
         <p>1988 - at just three years of age, Diana takes her first dancing class.  This sparks an interest in dance that will quickly flame into a
-          passionate that burns &#8217;till this day.</p>
+          passion that burns &#8217;till this day.</p>
       </div>
       <div class="card" id="event_3">
         <h3>A baby Sister!</h3>
@@ -84,19 +84,26 @@
       <div class="card" id="event_5">
         <h3>Diary of a not-at-all wimpy kid!</h3>
         <blockquote>
-          Diana broke her foot playing softball in middle school and had to have surgery on it.
+          &#8220;Diana broke her foot playing softball in middle school and had to have surgery on it.
           She was absolutely devastated because she was unable to dance in the upcoming recital that she had been preparing for.
           It was her first time wearing pointe shoes in her ballet class and she was supposed to perform the dance doing a lot of technique up on her toes.
           But through hard work and dedication, in a short amount of time, she built back some strength in her foot, and was allowed to perform in the recital.
           She was able to be in the section of girls that had pointe shoes on in her ballet class. She still could not perform the dance in her pointe shoes,
           but she wore her flat ballet shoes and performed the dance number that way. She danced and performed so well that you could not even tell that
-          she was wearing flat ballet shoes instead of pointe shoes.<br><br>
+          she was wearing flat ballet shoes instead of pointe shoes.&#8221;<br><br>
           --Christina Dowuona-Hammond.
         </blockquote>
       </div>
       <div class="card" id="event_6">
-        <h3>Begins Dancing Career</h3>
+        <h3>Begins Dancing Career / Bunker Dance Center</h3>
         <p>1997 - started dancing at Bunker Dance Center, where she continued her training and competed in Dance Competitions for the next 8 years.</p>
+        <blockquote>&#8220;She loved children and began teaching young children dance at Bunker Dance Center,
+          when she was in high school. She also taught dance for a lady who owned a preschool. &#8221;<br><br>--Ruth Ann Bedford</blockquote>
+        <blockquote>&#8220;Diana greatest love of dance was ballet. And she was a beautiful ballerina! She loved all of her teachers,
+          but was very fond of Dolly. Dolly had never had children of her own and the girls at the studio became her &lsquo;children.&rsquo;
+          When Diana graduated Dolly gave her a ring that her ballet teacher had given her! It was such an honor for Diana.
+          She still wears the ring to this day.&#8221;<br><br>--Ruth Ann Bedford</blockquote>
+
       </div>
       <div class="card" id="event_7">
         <h3>High School</h3>
