--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
           <img src="new_assets/las_vegas_city_map_panoramic_graphic_art.jpg" class="img-vegas">
         </div>
       </div>
+      <div class="card" id="event_6">
+        <h3>Not a Mean Bone in Her Body</h3>
+        <p>As Diana continued to grow, her kindness and sweet nature would become more and more evident.</p>
+        <blockquote>&#8220;Diana had such a kind heart! She couldn’t be mean to anyone or anything.
+          She loved animals particularly our dogs, Baby Dear and Haru. But she really loved her cat, Cindy.
+          Cindy was not the friendliest cat and drove the rest of us crazy sometimes… but Diana loved that cat!
+          She even took her with her when she left home and was sad when she had to give her away.&#8221;<br><br>--Ruth Ann Bedford</blockquote>
+      </div>
       <div class="card" id="event_5">
         <h3>Diary of a not-at-all wimpy kid!</h3>
         <blockquote>
@@ -95,7 +103,7 @@
         </blockquote>
       </div>
       <div class="card" id="event_6">
-        <h3>Begins Dancing Career / Bunker Dance Center</h3>
+        <h3>Bunker Dance Center</h3>
         <p>1997 - started dancing at Bunker Dance Center, where she continued her training and competed in Dance Competitions for the next 8 years.</p>
         <blockquote>&#8220;She loved children and began teaching young children dance at Bunker Dance Center,
           when she was in high school. She also taught dance for a lady who owned a preschool. &#8221;<br><br>--Ruth Ann Bedford</blockquote>
@@ -103,7 +111,12 @@
           but was very fond of Dolly. Dolly had never had children of her own and the girls at the studio became her &lsquo;children.&rsquo;
           When Diana graduated Dolly gave her a ring that her ballet teacher had given her! It was such an honor for Diana.
           She still wears the ring to this day.&#8221;<br><br>--Ruth Ann Bedford</blockquote>
-
+      </div>
+      <div class="card" id="event_6">
+        <h3>The Student Becomes the Teacher</h3>
+        <p>Through her long history with Bunker Dance Center, Diana would eventually excel to the point where she began to teach the students.</p>
+        <blockquote>&#8220;She loved children and began teaching young children dance at Bunker Dance Center,
+          when she was in high school. She also taught dance for a lady who owned a preschool. &#8221;<br><br>--Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_7">
         <h3>High School</h3>
@@ -129,17 +142,20 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
         <figure >
           <img class="img-seven-brides" src="new_assets/seven_brides.jpg"></img>
-          <figcaption></figcaption>
+          <figcaption>I think she's the cute one in the middle!</figcaption>
         </figure>
         <figure>
           <img class="img-road-trip" src="new_assets/st_george.jpg"></img>
-          <figcaption></figcaption>
+          <figcaption>Definitely the cute one on the left!</figcaption>
         </figure>
       </div>
       <div class="card" id="event_10">
+        <h3>Dixie Chic!</h3>
+        <p>2007 - attended Dixie State College in St. George, Utah, for two semesters.</p>
+      </div>
+      <div class="card" id="event_10">
         <h3>Student of the Year (was there ever any question?)</h3>
-        <p>2007 - attended Dixie State College in St. George, Utah, for two semesters.
-          She majored in Dance and was a member of the Dance Company, where she won the &#8220;Student of the Year&#8221; award in the Dance Department.</p>
+        <p>She won the &#8220;Student of the Year&#8221; award in the Dance Department.</p>
       </div>
       <div class="card" id="event_11">
         <h3>Marriage</h3>
