adds new photos and places them

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         started teaching Dance at a local studio, beginning 15+ years of teaching.</p>
         <figure >
           <img class="img-seven-brides" src="new_assets/seven_brides.jpg"></img>
-          <figcaption class="flush-right">I think she's the cute one in the middle!</figcaption>
+          <figcaption class="flush-left">I think she's the cute one in the middle!</figcaption>
         </figure>
         <figure>
           <img class="img-road-trip" src="new_assets/st_george.jpg"></img>
-          <figcaption class="flush-right">Definitely the cute one on the left!</figcaption>
+          <figcaption class="flush-left">Definitely the cute one on the left!</figcaption>
         </figure>
       </div>
       <div class="card" id="event_12">
@@ -166,9 +166,17 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2008 - A beautiful soul comes into the world.  And his name shall be ... Alec</p>
         <figure class="figure-alec">
           <img src="new_assets/alec_toddler.jpg" class="img-alec"></img>
-        <figcaption class="fig-caption-11 flush-right">Picture of Alec when he was a toddler.  Alec has been a great defender to his Mom and younger siblings.  And he has a very, very special place in his mother's heart.</figcaption>
-      </figure>
-      </div>
+          <figcaption class="fig-caption-11 flush-right">Picture of Alec when he was a toddler.  Alec has been a great defender to his Mom and younger siblings.  And he has a very, very special place in his mother's heart.</figcaption>
+        </figure>
+        <figure class="figure-alec alec-middle">
+          <img src="new_assets/DSC_1772.jpg" class="img-alec"></img>
+          <figcaption class="fig-caption-11 flush-right">Alec smiles after winning a foot race with all his sisters across the full distance of Snowville Park.</figcaption>
+        </figure>
+        <figure class="figure-alec">
+          <img src="new_assets/DSC_1201.jpg" class="img-alec"></img>
+          <figcaption class="fig-caption-11 flush-right">Alec introduces his youngest sibling, Brooklyn, to pumpkins for the first time.  Alec has been an amazing older brother to an innumberable amount of little sisters!  Photo was taken at The Kinlands (Formerly Petersen Family Farms), October, 2021.</figcaption>
+        </figure>
+        </div>
       <div class="card" id="event_16">
         <h3>Broadway Debut</h3>
         <p>2010 - performed in Andrew Lloyd Webber’s international phenomenon and
@@ -325,8 +333,21 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <h3>Child Number 6!</h3>
         <p>2020 - Diana gives birth to a beautiful baby girl. To Trevor's dismay and to everyone else's delight, she ixnays's naming her Khmer and instead decides on Brooklyn Kennedy Rapp! Of interest, previous </p>
         <figure>
-          <img class="img-hospital" src="new_assets/brooklynn_on_mama.jpg"></img>
-          <figcaption></figcaption>
+          <img class="img-baby-brooklyn" src="new_assets/brooklynn_on_mama.jpg"></img>
+          <figcaption class="flush-right" >Brooklyn begins the first of many naps on her favorite pillow.  From the time I got married to Diana, I said,
+            "we need to have a baby, and she needs to have your smile!" God was merciful and I got both.  Though painful for Diana, her labor was the shortest I had ever seen.
+          Three pushes and she was out.  P.S. she doesn't have any more hair on her head 14 months later than she does in that picture!</figcaption>
+        </figure>
+        <figure>
+          <img class="img-baby-brooklyn-valentines" src="new_assets/diana_brooklyn_honeymoon.jpg"></img>
+          <figcaption class="flush-right" >With COVID restricting so many things, we got a little bit out of order.  We got married, but couldn't get sealed until a year later.  By that time we had
+          the "Little." Also, with the combination of lack of money, travel restrictions, and getting called up on COVID orders, we weren't able to have a honeymoon until after we got sealed.
+        So by the time we could get a honeymoon we had a third wheel!  This meant leaving insanely early in the morning to start our 9 hour trip to Colorado.  But she did great!
+        And she was the cutest third wheel we could ever get!  Here we are at our last stop in Denver before we accidentally ended up in Star Valley, Wyoming.  Oops!  That was my fault.</figcaption>
+        </figure>
+        <figure>
+          <img class="" src="new_assets/sweet_valentine_sunshine.jpg"></img>
+          <figcaption class="flush-right" >This was Brooklyn's first Valentine's day. And she couldn't have a more adoring Valentine than her Mama!  </figcaption>
         </figure>
       </div>
       <div class="card" id="event_36">
