--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_17">
         <h3>Second Child</h3>
         <p>2013 - gave birth to her daughter</p>
-        <figure>
+        <figure class="figure-alec">
           <img class="img-baby-katherine" src="new_assets/katherine.jpg"></img>
-          <figcaption class="flush-right">An adoring mama looks down on baby Katherine while a loving  brother looks on.</figcaption>
+          <figcaption class="flush-right flush-right-katherine">An adoring mama looks down on baby Katherine while a loving  brother looks on.</figcaption>
         </figure>
-        <figure>
+        <figure class="figure-alec">
           <img class="img-school-katherine" src="new_assets/katherine_6249.jpg"></img>
-          <figcaption class="flush-right">Anyone who knows Katherine knows she's as sassy as she is sweet.  Some of our favorite quotes for her: <br><br>
+          <figcaption class="flush-right flush-right-katherine fig-caption-11">Anyone who knows Katherine knows she's as sassy as she is sweet.  Some of our favorite quotes for her: <br><br>
             &#8220;Can we not get a Spanish Fork name?&#8221;<br>
             - when asked what we should name Brooklyn<br>
             <br>
@@ -218,9 +218,9 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
             - (pronouncing Fight City, a boxing gym)<br>
           </figcaption>
         </figure>
-        <figure>
+        <figure class="figure-alec">
           <img class="img-kat-chair" src="new_assets/katherine_end_game_photo.jpg"></img>
-          <figcaption class="flush-right">Katherine watches a movie with one of her favorite blankets in the rocking chair that Diana rocked her to sleep in so many times as a child.</figcaption>
+          <figcaption class="flush-right flush-right-katherine">Katherine watches a movie with one of her favorite blankets in the rocking chair that Diana rocked her to sleep in so many times as a child.</figcaption>
         </figure>
       </div>
       <div class="card" id="event_18">
@@ -333,7 +333,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <h3>Child Number 6!</h3>
         <p>2020 - Diana gives birth to a beautiful baby girl. To Trevor's dismay and to everyone else's delight, she ixnays's naming her Khmer and instead decides on Brooklyn Kennedy Rapp! Of interest, previous </p>
         <figure>
-          <img class=".img-hospital" src="new_assets/brooklynn_on_mama.jpg"></img>
+          <img class="img-hospital" src="new_assets/brooklynn_on_mama.jpg"></img>
           <figcaption class="flush-right" >Brooklyn begins the first of many naps on her favorite pillow.  From the time I got married to Diana, I said,
             "we need to have a baby, and she needs to have your smile!" God was merciful and I got both.  Though painful for Diana, her labor was the shortest I had ever seen.
           Three pushes and she was out.  P.S. she doesn't have any more hair on her head 14 months later than she does in that picture!</figcaption>
