--- a/index.html
+++ b/index.html
@@ -332,22 +332,22 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       <div class="card" id="event_35">
         <h3>Child Number 6!</h3>
         <p>2020 - Diana gives birth to a beautiful baby girl. To Trevor's dismay and to everyone else's delight, she ixnays's naming her Khmer and instead decides on Brooklyn Kennedy Rapp! Of interest, previous </p>
-        <figure>
+        <figure class="figure-alec">
           <img class="img-hospital" src="new_assets/brooklynn_on_mama.jpg"></img>
-          <figcaption class="flush-right" >Brooklyn begins the first of many naps on her favorite pillow.  From the time I got married to Diana, I said,
+          <figcaption class="flush-right flush-right-katherine">Brooklyn begins the first of many naps on her favorite pillow.  From the time I got married to Diana, I said,
             "we need to have a baby, and she needs to have your smile!" God was merciful and I got both.  Though painful for Diana, her labor was the shortest I had ever seen.
           Three pushes and she was out.  P.S. she doesn't have any more hair on her head 14 months later than she does in that picture!</figcaption>
         </figure>
-        <figure>
+        <figure class="figure-alec">
           <img class="img-baby-brooklyn" src="new_assets/diana_brooklyn_honeymoon.jpg"></img>
-          <figcaption class="flush-right" >With COVID restricting so many things, we got a little bit out of order.  We got married, but couldn't get sealed until a year later.  By that time we had
+          <figcaption class="flush-right flush-right-katherine" >With COVID restricting so many things, we got a little bit out of order.  We got married, but couldn't get sealed until a year later.  By that time we had
           the "Little." Also, with the combination of lack of money, travel restrictions, and getting called up on COVID orders, we weren't able to have a honeymoon until after we got sealed.
         So by the time we could get a honeymoon we had a third wheel!  This meant leaving insanely early in the morning to start our 9 hour trip to Colorado.  But she did great!
         And she was the cutest third wheel we could ever get!  Here we are at our last stop in Denver before we accidentally ended up in Star Valley, Wyoming.  Oops!  That was my fault.</figcaption>
         </figure>
-        <figure>
+        <figure class="figure-alec">
           <img class="img-baby-brooklyn-valentines" src="new_assets/sweet_valentine_sunshine.jpg"></img>
-          <figcaption class="flush-right" >This was Brooklyn's first Valentine's day. And she couldn't have a more adoring Valentine than her Mama!  </figcaption>
+          <figcaption class="flush-right flush-right-katherine" >This was Brooklyn's first Valentine's day. And she couldn't have a more adoring Valentine than her Mama!  </figcaption>
         </figure>
       </div>
       <div class="card" id="event_36">
