replaces -- with &mdash;

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="card first-card" id="event_1">
         <h3>Birth</h3>
         <p class="flush-right right-modified">1985: Heavenly Father (and Mother) send their special Warrior-Princess to earth to join her family in Murray, Utah.</p>
-        <blockquote>When Diana came into the world, she came smiling! She always had the biggest smile, which came from the biggest heart. People loved her everywhere she went. <br><br>-- Ruth Ann Bedford</blockquote>
+        <blockquote>When Diana came into the world, she came smiling! She always had the biggest smile, which came from the biggest heart. People loved her everywhere she went. <br><br>  &mdash; Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_2">
         <h3>The Spark Ignites</h3>
@@ -72,7 +72,7 @@
         <h3>A baby Sister!</h3>
         <p>1989 - Just a few years after joining the great big world, Diana would welcome a new sister, who would become one of her best friends.</p>
           <blockquote>&#8220;Diana showed her sweet spirit at an early age. She was around two or three when Christina was Born.
-            As she held her on her Lap for the first time, she looked up and said &lsquo;do you want to kiss her?&rsquo;&#8221;<br><br>--Dennis Bedford</blockquote>
+            As she held her on her Lap for the first time, she looked up and said &lsquo;do you want to kiss her?&rsquo;&#8221;<br><br>  &mdash; Dennis Bedford</blockquote>
       </div>
       <div class="card" id="event_4">
         <h3>Early Life</h3>
@@ -87,7 +87,7 @@
         <blockquote>&#8220;Diana had such a kind heart! She couldn’t be mean to anyone or anything.
           She loved animals, particularly our dogs, Baby Dear and Haru. But she really loved her cat, Cindy.
           Cindy was not the friendliest cat and drove the rest of us crazy sometimes… but Diana loved that cat!
-          She even took her with her when she left home and was sad when she had to give her away.&#8221;<br><br>--Ruth Ann Bedford</blockquote>
+          She even took her with her when she left home and was sad when she had to give her away.&#8221;<br><br>  &mdash; Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_6">
         <h3>Diary of a not-at-all wimpy kid!</h3>
@@ -99,24 +99,24 @@
           She was able to be in the section of girls that had pointe shoes on in her ballet class. She still could not perform the dance in her pointe shoes,
           but she wore her flat ballet shoes and performed the dance number that way. She danced and performed so well that you could not even tell that
           she was wearing flat ballet shoes instead of pointe shoes.&#8221;<br><br>
-          --Christina Dowuona-Hammond.
+            &mdash; Christina Dowuona-Hammond.
         </blockquote>
       </div>
       <div class="card" id="event_7">
         <h3>Bunker Dance Center</h3>
         <p>1997 - started dancing at Bunker Dance Center, where she continued her training and competed in Dance Competitions for the next 8 years.</p>
         <blockquote>&#8220;She loved children and began teaching young children Dance at Bunker Dance Center
-          when she was in high school. She also taught dance for a lady who owned a preschool. &#8221;<br><br>--Ruth Ann Bedford</blockquote>
+          when she was in high school. She also taught dance for a lady who owned a preschool. &#8221;<br><br>  &mdash; Ruth Ann Bedford</blockquote>
         <blockquote>&#8220;Diana's greatest love of Dance was ballet. And she was a beautiful ballerina! She loved all of her teachers,
           but was very fond of Dolly. Dolly had never had children of her own and the girls at the studio became her &lsquo;children.&rsquo;
           When Diana graduated, Dolly gave her a ring that her ballet teacher had given her! It was such an honor for Diana.
-          She still wears the ring to this day.&#8221;<br><br>--Ruth Ann Bedford</blockquote>
+          She still wears the ring to this day.&#8221;<br><br>  &mdash; Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_8">
         <h3>The Student Becomes the Teacher</h3>
         <p>Through her long history with Bunker Dance Center, Diana would eventually excel until she became a teacher.</p>
         <blockquote>&#8220;She loved children and began teaching young children Dance at Bunker Dance Center,
-          when she was in high school. She also taught Dance for a lady who owned a preschool. &#8221;<br><br>--Ruth Ann Bedford</blockquote>
+          when she was in high school. She also taught Dance for a lady who owned a preschool. &#8221;<br><br>   &mdash; Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_9">
         <h3>High School</h3>
@@ -395,7 +395,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2021 - Finishes the last prerequisite for nursing school.  To some, this may seem like a mundane accomplishment. Still,
           a multitude of additional, sometimes even extraordinary circumstances demonstrate why this is more than just a few mere classes.
           Helen Keller once said: </p>
-        <blockquote>The world is not moved only by the mighty shoves of heroes, but also by the aggregate of the tiny pushes of each honest worker.<br><br>-- Helen Keller</blockquote>
+        <blockquote>The world is not moved only by the mighty shoves of heroes, but also by the aggregate of the tiny pushes of each honest worker.<br><br>   &mdash; Helen Keller</blockquote>
         <p class="second-paragraph">To understand the immensity of the aggregate of her accomplishment, we must understand the extraordinary circumstances of its collective parts.
         To begin with, her course work included such challenging classes as:</p>
         <ul>
@@ -428,9 +428,9 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p class="second-paragraph">Was this all of the singular, extraordinary circumstances that formed such an amazing aggregate?</p>
         <p class="second-paragraph">Not even close.</p>
         <p class="second-paragraph">See, during almost the entire time, the school had closed down in-classroom learning, meaning her preferred way of learning was unavailable to her.
-          This also made finding and making tutoring appointments exponentially harder since she now had to sacrifice an hour getting to and from campus.  And then  &mdash;  on top of that  &mdash;
-          the quarantine forced her children into homeschooling for a year, making her a teacher as well.  And  &mdash; on top of that  &mdash; she would have to watch Trevor leave twice on military
-          duty.  And  &mdash; on top of that  &mdash; her child would get COVID, then her mother-in-law would get COVID, and then she and Trevor would get COVID, making a month she would
+          This also made finding and making tutoring appointments exponentially harder since she now had to sacrifice an hour getting to and from campus.  And then &mdash; on top of that &mdash;
+          the quarantine forced her children into homeschooling for a year, making her a teacher as well.  And &mdash; on top of that &mdash; she would have to watch Trevor leave twice on military
+          duty.  And &mdash; on top of that &mdash; her child would get COVID, then her mother-in-law would get COVID, and then she and Trevor would get COVID, making a month she would
           be caring for her family.  All of this while never once neglecting her family.  And never once thinking of herself.  Every day she took another step forward while a thousand things
           tried to push her back.</p>
         <p class="second-paragraph">Tiny pushes forward.</p>
