goes over the &#8220; and &mdash; again

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="card first-card" id="event_1">
         <h3>Birth</h3>
         <p class="flush-right right-modified">1985: Heavenly Father (and Mother) send their special Warrior-Princess to earth to join her family in Murray, Utah.</p>
-        <blockquote>When Diana came into the world, she came smiling! She always had the biggest smile, which came from the biggest heart. People loved her everywhere she went. <br><br>  &mdash; Ruth Ann Bedford</blockquote>
+        <blockquote>&#8220;When Diana came into the world, she came smiling! She always had the biggest smile, which came from the biggest heart. People loved her everywhere she went.&#8221; <br><br>  &mdash; Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_2">
         <h3>The Spark Ignites</h3>
@@ -106,7 +106,7 @@
         <h3>Bunker Dance Center</h3>
         <p>1997 - started dancing at Bunker Dance Center, where she continued her training and competed in Dance Competitions for the next 8 years.</p>
         <blockquote>&#8220;She loved children and began teaching young children Dance at Bunker Dance Center
-          when she was in high school. She also taught dance for a lady who owned a preschool. &#8221;<br><br>  &mdash; Ruth Ann Bedford</blockquote>
+          when she was in high school. She also taught Dance for a lady who owned a preschool. &#8221;<br><br>  &mdash; Ruth Ann Bedford</blockquote>
         <blockquote>&#8220;Diana's greatest love of Dance was ballet. And she was a beautiful ballerina! She loved all of her teachers,
           but was very fond of Dolly. Dolly had never had children of her own and the girls at the studio became her &lsquo;children.&rsquo;
           When Diana graduated, Dolly gave her a ring that her ballet teacher had given her! It was such an honor for Diana.
@@ -315,7 +315,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region.
           Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks.
           The town of Magna experienced the worst of the impacts and hundreds of residents were temporarily displaced,
-          but perhaps miraculously, no fatalities or serious injuries resulted.&#8221;</blockquote></p>
+          but perhaps miraculously, no fatalities or serious injuries resulted.&#8221;  &mdash; Deseret News</blockquote></p>
       </div>
       <div class="card" id="event_33">
         <h3>Riots</h3>
@@ -331,7 +331,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
       </div>
       <div class="card" id="event_35">
         <h3>Child Number 6!</h3>
-        <p>2020 - Diana gives birth to a beautiful baby girl. To Trevor's dismay and to everyone else's delight, she ixnays's naming her Khmer and instead decides on Brooklyn Kennedy Rapp! Of interest, previous </p>
+        <p>2020 - Diana gives birth to a beautiful baby girl. To Trevor's dismay and to everyone else's delight, she ixnays's naming her Khmer and instead decides on Brooklyn Kennedy Rapp!</p>
         <figure class="figure-alec">
           <img class="img-hospital" src="new_assets/brooklynn_on_mama.jpg"></img>
           <figcaption class="flush-right flush-right-katherine">Brooklyn begins the first of many naps on her favorite pillow.  From the time I got married to Diana, I said,
@@ -395,7 +395,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p>2021 - Finishes the last prerequisite for nursing school.  To some, this may seem like a mundane accomplishment. Still,
           a multitude of additional, sometimes even extraordinary circumstances demonstrate why this is more than just a few mere classes.
           Helen Keller once said: </p>
-        <blockquote>The world is not moved only by the mighty shoves of heroes, but also by the aggregate of the tiny pushes of each honest worker.<br><br>   &mdash; Helen Keller</blockquote>
+        <blockquote>&#8220;The world is not moved only by the mighty shoves of heroes, but also by the aggregate of the tiny pushes of each honest worker.&#8221;<br><br>   &mdash; Helen Keller</blockquote>
         <p class="second-paragraph">To understand the immensity of the aggregate of her accomplishment, we must understand the extraordinary circumstances of its collective parts.
         To begin with, her course work included such challenging classes as:</p>
         <ul>
@@ -418,7 +418,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
           and then drive or walk Katherine to school.  She was the kind of mother that would walk the five blocks to pick up her kids from school just so she could listen to
           how their day was on the walk home.  She was the kind of mother that instigated in the midst of chaos new one-on-one movie nights with her children to make sure they knew
           she was still there for them.</p>
-        <p class="second-paragraph">But the aggregate included even more.</p>
+        <p class="second-paragraph">Even still, the aggregate included much, much more.</p>
         <p class="second-paragraph">During this time, she did one of the most extraordinary things a person could do.
           She conceived a life.  Spent 9 months letting that life grow a little body inside her own.  Gave birth so that life could become a person. And then held that person every night while at the computer trying to do homework one-handed.</p>
         <p class="second-paragraph">But the aggregate included even more examples of faith and sacrifice.</p>
