fixes one last thing

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ Emily Mcternan, Haley Heckethorn, Ben Green, Taylor Labruzzo, Napoleon & Tabitha
         <p class="second-paragraph">Never stopping.</p>
         <p class="second-paragraph">Honestly working.</p>
         <p class="second-paragraph">Diana, you truly are...</p>
-        <p class="second-paragraph">a humble hero.</p>
+        <p class="second-paragraph"><em>a humble hero.</em></p>
       </div>
       <div class="card" id="event_41">
         <h3>And the Show Must Go On!</h3>
