--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p>As Diana continued to grow, her kindness and sweet nature would become more and more evident.</p>
         <blockquote>&#8220;Diana had such a kind heart! She couldn’t be mean to anyone or anything.
           She loved animals, particularly our dogs, Baby Dear and Haru. But she really loved her cat, Cindy.
-          Cindy was not the friendliest cat and drove the rest of us crazy sometimes… but Diana loved that cat!
+          Cindy was not the friendliest cat and drove the rest of us crazy sometimes&#x2026; but Diana loved that cat!
           She even took her with her when she left home and was sad when she had to give her away.&#8221;<br><br>  &mdash; Ruth Ann Bedford</blockquote>
       </div>
       <div class="card" id="event_6">
