fixes various grammar and punctuation errors

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
       </div>
       <div class="card" id="event_20">
         <h3>LDS Business College</h3>
-        <p>2019 &mdash; attended LDS Business College for 3 semesters</p>
+        <p>2019 &mdash; attended LDS Business College for 3 semesters.</p>
       </div>
       <div class="card" id="event_21">
         <h3>New Love</h3>
-        <p>2019 &mdash; meets the love of her life</p>
+        <p>2019 &mdash; meets the love of her life.</p>
         <figure>
           <img class="img-road-trip" src="new_assets/vegas_3849.jpg"></img>
           <figcaption></figcaption>
@@ -257,7 +257,7 @@
         <h3>Marriage</h3>
         <p>2019 &mdash; just two days short of two months after meeting,
           she and Trevor get married in the bishop&#8217;s office with only her,
-          Trevor, the bishop, and Alec and Katherine.</p>
+          Trevor, the bishop, and Alec and Katherine attending.</p>
 
       </div>
       <div class="card" id="event_24">
@@ -274,25 +274,26 @@
       </div>
       <div class="card" id="event_25">
         <h3>Westward HO!</h3>
-        <p>2019 &mdash; moved to West Jordan, Utah</p>
+        <p>2019 &mdash; moved to West Jordan, UT.</p>
       </div>
       <div class="card" id="event_26">
         <h3>Oh, Lugnuts!</h3>
         <p>2019 &mdash; Trevor&#8217;s car breaks down, so for three months, over three separate repairs,
-          they have to take turns taking the car to work or school while the other takes the train</p>
+          they have to take turns taking the car to work or school while the other takes the train.</p>
       </div>
       <div class="card" id="event_27">
         <h3>Tragedy</h3>
-        <p>2020 &mdash; Hold&#8217;s her sister&#8217;s hand as she struggles with the loss of her second child</p>
+        <p>2020 &mdash; Hold&#8217;s her sister&#8217;s hand as she struggles with the loss of her second child.</p>
       </div>
       <div class="card" id="event_28">
         <h3>A Room with a View</h3>
-        <p>2020 &mdash; gives up her lovely 3rd story apartment with a view of the mountains for a basement apartment with cheaper rent and larger space</p>
+        <p>2020 &mdash; gives up her lovely 3<super>rd</super> story apartment (with a glorious view of the Wasatch mountains) for a basement apartment with cheaper rent and larger space.</p>
       </div>
       <div class="card" id="event_29">
         <h3>Pandemic</h3>
-        <p>2020 &mdash; the pandemic forces her to learn to home school her children while getting cut off from her professors and pivot to a virtual school environment.
-          Eventually, her daughter would contract it, then herself and Trevor, then her mother-in-law, creating a whole month of quarantine.</p>
+        <p>2020 &mdash; the global COVID-19 pandemic forces all schooling to move to a virtual environment.  This cuts Diana off from her professors while simultaneously forces her to become a
+          home school teacher for Alec and Katherine. Eventually, two of her step-daughters would contract it, then her own daughter then herself and Trevor, and finally her mother-in-law,
+          creating a whole month of quarantining.</p>
         <figure>
           <video class="covid" autoplay muted playsinline loop poster="new_assets/23311.jpg">
             <source src="new_assets/Element-coronavirus_32s-background-1080.mp4"
@@ -306,15 +307,15 @@
       <div class="card" id="event_30">
         <h3>You&#8217;re Prego?!?!</h3>
         <p>2020 &mdash; finds out that 5 months into her marriage, amidst adjusting to a new family,
-          she will be bringing child number 6 into her your&#8217;s-mine-and-ours family</p>
+          she will be bringing child number 6 into her your&#8217;s-mine-and-ours family.</p>
       </div>
       <div class="card" id="event_31">
-        <h3>SLC</h3>
+        <h3>SLCC</h3>
         <p>2020 &mdash; began school at Salt Lake Community College to prepare for Nursing School.</p>
       </div>
       <div class="card" id="event_32">
         <h3>Earthquake !!!</h3>
-        <p>2020 &mdash; Diana and Trevor would wake up on the third story to their entire apartment swaying uncontrollably for several minutes.
+        <p>2020 &mdash; Diana and Trevor would be thrust awake on the third story as their entire apartment sways uncontrollably for several minutes.
           The worst shockwave measured 6.5 on the richter scale, just 14 miles from their house. Deseret News would report, <blockquote>&#8220;An early-morning, 5.7 magnitude earthquake centered
           near Magna on March 18 was the most powerful temblor in the state for decades and one felt by millions in the region.
           Hitting a populace already on edge thanks to the burgeoning COVID-19 pandemic, the event was followed by dozens of aftershocks.
@@ -330,7 +331,9 @@
       </div>
       <div class="card" id="event_34">
         <h3>Presidential Elections</h3>
-        <p>Presidential Elections would be historic in seeing the first Black woman Vice-President,
+        <p>Presidential Elections would be historic in seeing &ldquo;the first woman, the first Black American, and the first South Asian American to be elected Vice President,&rdquo;
+          (<a href="https://www.whitehouse.gov/administration/vice-president-harris/">Kamala Harris: The Vice President. A career for the people &mdash;
+            breaking barriers and fighting for working families. The White House</a>)
           but would also lead to a near coup d&#8217;é·tat as rioters ransacked the nation's capital</p>
       </div>
       <div class="card" id="event_35">
@@ -339,19 +342,19 @@
         <figure class="figure-alec">
           <img class="img-hospital" src="new_assets/brooklynn_on_mama.jpg"></img>
           <figcaption class="flush-right flush-right-katherine">Brooklyn begins the first of many naps on her favorite pillow.  From the time I got married to Diana, I said,
-            "we need to have a baby, and she needs to have your smile!" God was merciful and I got both.  Though painful for Diana, her labor was the shortest I had ever seen.
+            &ldquo;we need to have a baby, and she needs to have your smile!&rdquo; God was merciful and I got both.  Though painful for Diana, her labor was the shortest I had ever seen.
           Three pushes and she was out.  P.S. she doesn't have any more hair on her head 14 months later than she does in that picture!</figcaption>
         </figure>
         <figure class="figure-alec">
           <img class="img-baby-brooklyn" src="new_assets/diana_brooklyn_honeymoon.jpg"></img>
-          <figcaption class="flush-right flush-right-katherine" >With COVID restricting so many things, we got a little bit out of order.  We got married, but couldn't get sealed until a year later.  By that time we had
-          the "Little." Also, with the combination of lack of money, travel restrictions, and getting called up on COVID orders, we weren't able to have a honeymoon until after we got sealed.
-        So by the time we could get a honeymoon we had a third wheel!  This meant leaving insanely early in the morning to start our 9 hour trip to Colorado.  But she did great!
+          <figcaption class="flush-right flush-right-katherine" >With COVID restricting so many things, we got a little bit out of order.  We got married, but couldn&rsquo;t get sealed until a year later.  By that time we had
+          the &ldquo;Little.&rdquo; Also, with the combination of lack of money, travel restrictions, and getting called up on COVID orders, we weren't able to have a honeymoon until after we got sealed.
+        So by the time we could get a honeymoon we had a third wheel!  This meant leaving insanely early (4 A.M.) in the morning to start our 9 hour drive to Colorado.  But she did great!
         And she was the cutest third wheel we could ever get!  Here we are at our last stop in Denver before we accidentally ended up in Star Valley, Wyoming.  Oops!  That was my fault.</figcaption>
         </figure>
         <figure class="figure-alec">
           <img class="img-baby-brooklyn-valentines" src="new_assets/sweet_valentine_sunshine.jpg"></img>
-          <figcaption class="flush-right flush-right-katherine" >This was Brooklyn's first Valentine's day. And she couldn't have a more adoring Valentine than her Mama!  </figcaption>
+          <figcaption class="flush-right flush-right-katherine" >This was Brooklyn&rsquo;s first Valentine&rsquo;s day. And she couldn&rsquo;t have a more adoring Valentine than her Mama!  </figcaption>
         </figure>
       </div>
       <div class="card" id="event_36">
@@ -386,13 +389,13 @@
       <div class="card" id="event_38">
         <h3>Deployment X 4</h3>
         <p>2021 &mdash; Diana persists through mothering, step-mothering, and schooling alone while Trevor deploys with the Army four times.
-          Once for three weeks to Ft. Sam Houston for ALC training. Twice for COVID-19, which, although the deployment was local, it put him working two full-time job.
+          Once for three weeks to Ft. Sam Houston for ALC training. Twice for COVID-19, which, although the deployment was local, still put him working two full-time jobs.
           And finally was the almost-to-Afghanistan deployment where we went through all the physical, mental, and emotional preparation,
-          until two days before "boots-on-the-ground" when the President pulled out.</p>
+          until two days before "boots-on-the-ground" when President Biden pulled out.</p>
       </div>
       <div class="card" id="event_39">
         <h3>More Tragedy</h3>
-        <p>2021 &mdash; remains strong during the loss of her father-in-law, with whom she had a very close relationship</p>
+        <p>2021 &mdash; remains strong during the loss of her father-in-law, with whom she had a very close relationship.</p>
       </div>
       <div class="card" id="event_40">
         <h3>A Might Hero and an Honest Worker</h3>
