--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           For seven years Diana was on the same Performing Arts Dance Team as Aaron.  She even got to kiss him when she was performing as Snow White in "Snow White,"
           a ballet dance performance where she played Snow White and he was the Prince. Napoleon & Tabitha (Judges on So You Think You Can Dance) were Diana's Hip-Hop teachers. By the time diana
           was getting taught by them they had choreographed performances for Jennifer Lopez and various other stars, which made it even more exciting and a privilege to work with them.  "They were
-          always so down-to earth and fun.  And always joking around with us and making rehearsals very fun.  They were never mean or strict.  They were always fun to work with.  They were kind of like
+          always so down-to-earth and fun.  And always joking around with us and making rehearsals very fun.  They were never mean or strict.  They were always fun to work with.  They were kind of like
           a big brother and sister to us." Diana was also able to work with Stacey Tookey, and Christina, her sister, was able to work with Peter Chu.</p>
         <figure>
           <img class="bengal" src="new_assets/default_news.png"></img>
@@ -202,24 +202,24 @@
           <img class="img-school-katherine" src="new_assets/katherine_6249.jpg"></img>
           <figcaption class="flush-right flush-right-katherine fig-caption-11">Anyone who knows Katherine knows she's as sassy as she is sweet.  Some of our favorite quotes for her: <br><br>
             &#8220;Can we not get a Spanish Fork name?&#8221;<br>
-            - when asked what we should name Brooklyn<br>
+            &mdash; when asked what we should name Brooklyn<br>
             <br>
             &#8220;Macaroni and Cheese Salad&#8221;<br>
-            - what she called salad with macaroni noodles in it.<br>
+            &mdash; what she called salad with macaroni noodles in it.<br>
             <br>
             &#8220;It's not fair the (unborn) baby gets to stay up! She gets to do whatever she wants!&#8221;<br>
-            - when told she needed to go to bed.<br>
+            &mdash; when told she needed to go to bed.<br>
             <br>
 
             &#8220;Stop saying words! You're going to get in trouble!&#8221;<br>
-            - trying to help her brother, Alec, not get in trouble<br>
+            &mdash; trying to help her brother, Alec, not get in trouble<br>
             <br>
             &#8220;Bed bombs and boomsticks&#8221;<br>
-            - trying to pronounce the movie.<br>
+            &mdash; trying to pronounce the movie.<br>
 
             <br>
             &#8220;Fight Kitty&#8221;<br>
-            - (pronouncing Fight City, a boxing gym)<br>
+            &mdash; (pronouncing Fight City, a boxing gym)<br>
           </figcaption>
         </figure>
         <figure class="figure-alec">
