add JS to display the last date the page was updated

--- a/index.html
+++ b/index.html
@@ -458,14 +458,16 @@
           <figcaption></figcaption>
         </figure>
       </div>
-      </div>
-      <div>
-        <p class="tribute-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a>
+      <div class="card">
+        <p class="more-info">For more information see her <a id="tribute-link" href="https://enpointeballet.net/collections/our-instructors/products/diana-rapp" target="_blank">bio</a>.
         </p>
+        <p id="last-updated"></p>
+      </div>
       </div>
     </main>
     <script src="./js/scripts.js"></script>
     <script src="./js/button.js"></script>
     <script src="./js/visibility.js"></script>
+    <script src="./js/last-updated.js"></script>
     </body>
 </html>
