--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         </div>
       </div>
       <div class="card" id="event_5">
+        <h3>Ahhh&#8230;it's Nahjee</h3>
+        <p>Diana welcomed a new baby brother (his real name is Jason).  She loved to pretend he was her own baby.  Diana came up with the nickname Nahjee and would often call out,&lsquo;NAAHHHH JEEEEEEE!&rsquo; </p>
+      </div>
+      <div class="card" id="event_5">
         <h3>Not a Mean Bone in Her Body</h3>
         <p>As Diana continued to grow, her kindness and sweet nature would become more and more evident.</p>
         <blockquote>&#8220;Diana had such a kind heart! She couldn’t be mean to anyone or anything.
