saturdays warrior story

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
         <blockquote>&#8220;She loved children and began teaching young children Dance at the Bunker Dance Center,
           when she was in high school. She also taught Dance for a lady who owned a preschool. &#8221;<br><br>   &mdash; RuthAnn Bedford</blockquote>
       </div>
+      <div class="card" id="event_8">
+        <h3>Saturday's Warrior-Princess!</h3>
+        <p>Diana was a freshmen in highschool when she got a part in her very first musical &mdash; Saturday's Warrior.  She was part of the ensemble.</p>
+        <blockquote>&#8220; It was fun because the choreographer was also the owner of the [Bunker] dance studio that I was already a part of.  So she just had all of our team
+          be a part of this musical. Actually being a part of the cast in the musical, I learned this for the first time, is that being a part of the cast they try to make other actors break character and laugh.
+          I never did it to anybody, cause I'm too nice.  So when we're trying to be serious in a scene in heaven we were supposed to pretend that we were talking and he would say
+          something that was really funny to try and make us laugh.  I always broke character, because, you know me, I can't keep a straight face.&#8221;<br><br>   &mdash; Diana Rapp</blockquote>
+      </div>
       <div class="card" id="event_9">
         <h3>High School</h3>
         <p>2004 &mdash; graduated from Bonanza High School in Las Vegas, NV. Diana taught Dance with Kathy Bunker at the Bunker Dance Center for one year. Her friendship with Kathy is still alive today,
